--- a/frontend/frontier.html
+++ b/frontend/frontier.html
@@ -538,6 +538,7 @@
                           color: "#eeac99",
                         },
                         fill: 'tozeroy',
+                        fillcolor:"#eeac99",
                         type: 'scatter'
                       }];
                       
@@ -664,6 +665,7 @@
                         var data = [{
                           mode: 'none',
                           fill: 'tozeroy',
+                          fillcolor:"#eeac99",
                           type: 'scatter',
                           name: aname,
                           x: unpack(d, 'degree'),
@@ -798,6 +800,7 @@
               var trace1 = {
                 mode: 'none',
                 fill: 'tozeroy',
+                fillcolor:"#5e9aa0",
                 type: 'scatter',
                 name: 'true cdf',
                 x: rows.map(function(row) { return row['degree']}),
@@ -859,6 +862,7 @@
             var trace1 = {
               mode: 'none',
               fill: 'tozeroy',
+              fillcolor:"#5e9aa0",
               type: 'scatter',
               x: unpack(rows, 'degree'),
               y: unpack(rows, 'count'),
