Fixing bugs for animating

--- a/frontend/frontier.html
+++ b/frontend/frontier.html
@@ -1076,6 +1076,7 @@
               var data = [{
                 mode: 'none',
                 fill: 'tozeroy',
+                fillcolor: '#eeac99',
                 type: 'scatter',
                 name: "test",
                 x: unpack(d, 'degree'),
@@ -1133,9 +1134,10 @@
               console.log(col)
               if(time >10) return;
               var data = [{
-                mode: 'none',
-                fill: 'tozeroy',
-                type: 'scatter',
+                //mode: 'none',
+                //fill: 'tozeroy',
+                //fillcolor: '#eeac99',
+                type: 'bar',
                 textposition: 'auto',
                 text: unpack(d, col),
                 name: aname,
