--- a/frontend/frontier.html
+++ b/frontend/frontier.html
@@ -877,6 +877,7 @@
               autosize: false,
               width: 250,
               height: 300,
+              dragmode: "pan",
               xaxis: {
                 automargin: true,
                 title: {
