line style added back

--- a/frontend/finding.html
+++ b/frontend/finding.html
@@ -110,8 +110,8 @@
                 For degree distribution Edge-DP algorithms, <b>degHis_Lap</b> outperforms degSeq_Lap.
               </p>
               <p>
-                For subgraph counting algorithms, <b>Ladder</b> outperforms Laplace and Smooth across all input settings.
-                This is consistent with findigns in the paper. [?]
+                For subgraph counting algorithms, <b>Ladder</b> outperforms Laplace and Smooth across all input settings, 
+                which is consistent with findings from literature.
               </p>
             </div>
           </div>
