--- a/frontend/index.html
+++ b/frontend/index.html
@@ -119,14 +119,14 @@
 
     <br />
 
-    <a href="https://uwaterloo.ca/data-systems-group/">
+    <!-- <a href="https://uwaterloo.ca/data-systems-group/">
       <img 
         id="logo_png" 
         src="DSGLogo.png" 
         alt="DSG logo"
         class="logo"
       >
-    </a>
+    </a> -->
   </div>
 
   <!-- Bootstrap core JavaScript -->
