some to-dos done

--- a/frontend/uploading.html
+++ b/frontend/uploading.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title>DPGraph</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -68,7 +68,7 @@
 
     <!-- Following are some text describing how we are interact with the privacy frontier. -->
 
-    <h1 class="text-left">Privacy Accuracy Frontier</h1>
+    <h1 class="text-left">Upload Your Algorithm</h1>
 
         <br>
         <p>All the algorithms that is being uploaded will be working on mini-FACEBOOK dataset with only 100 nodes only</p>
