--- a/frontend/index.html
+++ b/frontend/index.html
@@ -75,15 +75,68 @@
         <br />
         <h1 class="welcome-msg">Welcome to DPGraph</h1>
         <br />
-        <p class="card-para"> 
+        <!-- <p class="card-para"> 
           A web-based tool designed to help researchers and practitioners 
           evaluate the accuracy and efficiency of state-of-the-art 
           differentially private algorithms on graphs.
         </p>
-        <br />
+        <br /> -->
       </div>
       <div>
-        <a 
+        <div>
+          <a 
+            href="#motivation-para" 
+            class="btn btn-info space-left-bottom" 
+            data-toggle="collapse"
+          >
+            Privacy is important!
+          </a>
+          <div id="motivation-para" class="collapse">
+            <p class="card-para">
+              As the influence of the Internet rapidly grows, data privacy has been increasingly important for everyone.  
+              Differential privacy is the gold standard that offers strong privacy protection on many data types, while 
+              allowing analysts to perform sensitive data analysis.
+            </p>
+          </div>
+          <div>
+            <a 
+              href="#introduction-para" 
+              class="btn btn-info space-left-bottom" 
+              data-toggle="collapse"
+            >
+              What is DPGraph?
+            </a>
+            <div id="introduction-para" class="collapse">
+              <p class="card-para">
+                A web-based tool designed to help researchers and practitioners 
+                evaluate the accuracy and efficiency of state-of-the-art 
+                differentially private algorithms on graphs.
+              </p>
+            </div>
+            <div>
+              <a 
+                href="#overview-para" 
+                class="btn btn-info space-left-bottom" 
+                data-toggle="collapse"
+              >
+                How does DPGraph help you?
+              </a>
+              <div id="overview-para" class="collapse">
+                <p class="card-para">
+                  You can explore the accuracy and efficiency of private graph algorithms, 
+                  analyze the empirical findings, and look at any background information of your interest.
+                </p>
+              </div>
+            </div>
+        </div>
+        <!-- <a 
+          href="#definition-para" 
+          class="btn btn-info space-left-bottom" 
+          data-toggle="collapse"
+        >
+          What does DPGraph do?
+        </a> -->
+        <!-- <a 
           href="#motivation-para" 
           class="btn btn-info space-left-bottom" 
           data-toggle="collapse"
@@ -107,7 +160,7 @@
             and edgeDP hides the inclusion/remoal of an edge (a relation).
             Thus, NodeDP offers stronger privacy protection.
           </p>
-        </div>
+        </div> -->
       </div>
     </div>
 
